--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="banner_wrap">
         <div class="inner">
             <div class="banner">
-                <div class="pic"><img src="images/6e2b5854cb5940ea9554159b29154f1f.jpg"></div>
+                <div class="pic"><img src="images/946c162701b642f7a3a57d092259d754.jpg"></div>
                 <ul class="clear">
                     <li><a href="javascript:;">双旦盛惠，一触即发</a></li>
                     <li><a href="javascript:;">春节直斐幸福，斐你莫属</a></li>
@@ -417,13 +417,17 @@
                     <h4>达人点评</h4>
                 </div>
                 <div class="contact_banner">
+                    <div class="pre"></div>
+                    <div class="next"></div>
                     <ul class="clear">
                         <li>
                             <div class="pic">
-                                <img src="images/ed2182267a7f44ae885fccb5a3d44dfa.png">
-                                <div class="title_area clear">
-                                    <div class="area">梵蒂冈梵蒂冈梵蒂冈地方规定</div>
-                                </div>
+                                <a href="javascript:;">
+                                    <img src="images/1322675d44cb4278a5d91bf5bb31886f.jpg">
+                                    <div class="title_area clear">
+                                        <div class="area">梵蒂冈梵蒂冈梵蒂冈地方规定</div>
+                                    </div>
+                                </a>
                             </div>
                             <div class="thoughts">
                                 <div class="people">林女士</div>
@@ -446,10 +450,13 @@
                         </li>
                         <li>
                             <div class="pic">
-                                <img src="images/1322675d44cb4278a5d91bf5bb31886f.jpg">
-                                <div class="title_area clear">
-                                    <div class="area">梵蒂冈梵蒂冈梵蒂冈地方规定</div>
-                                </div>
+                                <a href="javascript:;">
+                                    <img src="images/1322675d44cb4278a5d91bf5bb31886f.jpg">
+                                    <div class="title_area clear">
+                                        <div class="area">梵蒂冈梵蒂冈梵蒂冈地方规定</div>
+                                    </div>
+                                </a>
+
                             </div>
                             <div class="thoughts">
                                 <div class="people">林女士</div>
@@ -475,7 +482,273 @@
             </div>
         </div>
     </div>
+    <div class="commit">
+        <div class="title_wrap">
+            <div class="inner">
+                <dl class="clear title">
+                    <dt>悠哉五大承诺 让您放心出游</dt>
+                    <dd>产品质优</dd>
+                    <dd>信息透明</dd>
+                    <dd>履行约定</dd>
+                    <dd>维护权益</dd>
+                    <dd>先行赔付</dd>
+                </dl>
+            </div>
+        </div>
+        <div class="inner">
+            <div class="problem_wrap clear">
+                <dl class="problem_list">
+                    <dt>如何付款和发票</dt>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">信用卡电话支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                </dl>
+                <dl class="problem_list">
+                    <dt>如何付款和发票</dt>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">信用卡电话支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                </dl>
+                <dl class="problem_list">
+                    <dt>如何付款和发票</dt>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">信用卡电话支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                </dl>
+                <dl class="problem_list">
+                    <dt>如何付款和发票</dt>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">信用卡电话支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                </dl>
+                <dl class="problem_list">
+                    <dt>如何付款和发票</dt>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">信用卡电话支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                    <dd><a href="javascript:;">支付宝网银支付</a></dd>
+                </dl>
+                <dl class="problem_list problemLastlist">
+                    <dt>如何付款和发票</dt>
+                    <dd></dd>
+                </dl>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="footer"></div>
+<div class="footer">
+    <div class="inner">
+        <div class="footer_sns">
+            <ul class="sns clear">
+                <li>
+                    悠哉微信公众号
+                    <a class="btn" href="javascript:;">扫码</a>
+                </li>
+                <li>
+                    悠哉新浪微博
+                    <a class="btn" href="javascript:;">+加关注</a>
+                </li>
+                <li>
+                    <p class="email">投诉建议邮箱 <a href="javascript:;">qa@uzai.com</a>，电话：1010-9898转8</p>
+                    <p>通讯地址：上海市普陀区铜川路70号新城市中心广场18F</p>
+                </li>
+            </ul>
+        </div>
+        <div class="webtrust">
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+            <a href="javascript:;"></a>
+        </div>
+        <p class="copyright">
+            Copyright 2005-2016 Uzai.com 许可证编号:L-SH-CJ00112 沪ICP备06021606号 悠哉呼叫中心来电显示号码为：<span>10109898</span>
+        </p>
+        <div class="aboutlink">
+            <ul class="clear">
+                <li><a href="javascript:;">悠哉旅游网</a></li>
+                <li><a href="javascript:;">悠哉历程</a></li>
+                <li><a href="javascript:;">隐私保护</a></li>
+                <li><a href="javascript:;"><span>诚聘英才</span></a></li>
+                <li><a href="javascript:;">关于我们</a></li>
+                <li><a href="javascript:;"><span>营业网点</span></a></li>
+                <li><a href="javascript:;">网站地图</a></li>
+                <li><a href="javascript:;">友情链接</a></li>
+                <li><a href="javascript:;">商务合作</a></li>
+                <li><a href="javascript:;">意见反馈</a></li>
+            </ul>
+        </div>
+        <div class="footer_nav">
+            <dl class="clear">
+                <dt><a href="javascript:;">出境旅游：</a></dt>
+                <dd><a href="javascript:;">泰国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">欧洲旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">香港旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">马尔代夫旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">菲律宾旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">普吉岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">巴厘岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">美国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">塞班旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">济州岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">澳门旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">意大利旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">泰国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">欧洲旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">香港旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">马尔代夫旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">菲律宾旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">普吉岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">巴厘岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">美国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">塞班旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">济州岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">澳门旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">意大利旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd class="arrow">◇</dd>
+            </dl>
+            <dl class="clear">
+                <dt><a href="javascript:;">出境旅游：</a></dt>
+                <dd><a href="javascript:;">泰国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">欧洲旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">香港旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">马尔代夫旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">菲律宾旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">普吉岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">巴厘岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">美国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">塞班旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">济州岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">澳门旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">意大利旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">泰国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">欧洲旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">香港旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">马尔代夫旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">菲律宾旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">普吉岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">巴厘岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">美国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">塞班旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">济州岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">澳门旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">意大利旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd class="arrow">◇</dd>
+            </dl>
+            <dl class="clear">
+                <dt><a href="javascript:;">出境旅游：</a></dt>
+                <dd><a href="javascript:;">泰国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">欧洲旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">香港旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">马尔代夫旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">菲律宾旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">普吉岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">巴厘岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">美国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">塞班旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">济州岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">澳门旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">意大利旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">泰国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">欧洲旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">香港旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">马尔代夫旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">菲律宾旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">普吉岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">巴厘岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">美国旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">塞班旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">济州岛旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">澳门旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd><a href="javascript:;">意大利旅游</a></dd>
+                <dd class="icon">|</dd>
+                <dd class="arrow">◇</dd>
+            </dl>
+        </div>
+    </div>
+</div>
 </body>
 </html>
